--- a/detail-produk.html
+++ b/detail-produk.html
@@ -50,7 +50,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg shadow-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold text-primary" href="index.html">
+            <a class="navbar-brand fw-bold text-primary" href="index.php">
                 <img src="assets/images/logo.png" alt="FP Store" height="50" class="me-2">FP Store
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -59,7 +59,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="index.php">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="produk.html">Produk</a>
@@ -85,7 +85,7 @@
         <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-0">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="index.php">Home</a></li>
                     <li class="breadcrumb-item"><a href="produk.html">Produk</a></li>
                     <li class="breadcrumb-item active" aria-current="page" id="breadcrumb-product">Loading...</li>
                 </ol>
